@@ -13,6 +13,7 @@
   [Your user agent does not support frames or is currently configured
   not to display frames. However, you may visit
   <A href="foo.html">the related document.</A>]
+  <a href="?a=b">just the query string</A>
   </IFRAME>
   </FRAMESET>
 </FRAMESET>
