@@ -7,6 +7,7 @@
     'mydomain.com:443' (Thanks Michal Ochman!)
   * Fixing strange uri escaping problems [#22604]
   * Making content-type determintation more robust.  (thanks Han Holl!)
+  * Dealing with links that are query string only.  [#22402]
 
 === 0.8.5
 
